<resources>
    <string name="app_name">Bloobs!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bloobs!</string>
    <string name="nav_header_subtitle">l\'application marine</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textBubble">Tapez sur l\'écran pour faire apparaître des bulles</string>
    <string name="nom1">Ridiana\nLI</string>
    <string name="nom2">Clément\nGUIBOURG</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Les animaux marins</string>
    <string name="menu_bubble">Jeu des bulles</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_about">A propos</string>
    <string name="menu_send">Send</string>
    <string name="dialogueDuPoisson">Salut, je suis Sébastion le poisson</string>
    <string name="welcomeMessage">Bienvenue dans l\'application Bloobs! \nl\'application qui vous fait boire la tasse</string>
    <string name="about1">Cette application Kotlin a été développée dans le cadre d\'un devoir visant a faire travaillé nos connaissances aquise lors de nos cours</string>
    <string name="about2">Voici les membre du groupe aillant consu et développé cette application sur le theme de l\'ocean : </string>
</resources>
