<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_ocean_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="155dp"
                android:layout_height="121dp"
                android:layout_row="1"
                android:layout_column="0"
                android:src="@drawable/ppridiana" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="119dp"
                android:layout_row="2"
                android:layout_column="0"
                android:background="@android:color/holo_blue_dark"
                android:src="@drawable/ppclement" />

            <TextView
                android:id="@+id/nom2"
                android:layout_width="155dp"
                android:layout_height="117dp"
                android:layout_row="2"
                android:layout_column="1"
                android:gravity="center"
                android:text="@string/nom2"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about2"
                android:layout_width="173dp"
                android:layout_height="106dp"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/about2"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <TextView
                android:id="@+id/nom1"
                android:layout_width="169dp"
                android:layout_height="117dp"
                android:layout_row="1"
                android:layout_column="1"
                android:gravity="center"
                android:text="@string/nom1"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about1"
                android:layout_width="151dp"
                android:layout_height="133dp"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:text="@string/about1"
                android:textColor="@android:color/black" />

        </GridLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>